# famplex

./: .bumpversion.cfg  DEMO.ipynb  Famplex Equivalences.py  Famplex Relations.py  README.md  README.rst  famplex_equivalences.py  setup.cfg  tox.ini
docs/source/: conf.py
src/bio2bel_famplex/: __init__.py  constants.py  equivalences.py  manager.py  relations.py
tests/: cases.py
