##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = bio2bel_famplex
version = 0.0.1-dev
url = https://github.com/bio2bel/famplex
author = Kristian Kolpeja and Charles Tapley Hoyt
author_email = charles.hoyt@scai.fraunhofer.de
maintainer = Charles Tapley Hoyt
maintainer_email = charles.hoyt@scai.fraunhofer.de
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
license = MIT
description = Downloader, parser, and BEL converter for FamPlex
long_description = file: README.rst
keywords =
    Biological Expression Language
    Systems Biology
    Protein Families
    Protein Complexes

[options]
install_requires =
    click
    pandas
    pybel
python_requires = >=3.6
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

# configuring bdist_wheel
[bdist_wheel]
python-tag = py36
