##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = bio2bel_famplex
version = 0.0.2-dev
description = Downloader, parser, and BEL converter for FamPlex
long_description = file: README.rst

url = https://github.com/bio2bel/famplex

license = MIT
license_file = LICENSE

author = Kristian Kolpeja and Charles Tapley Hoyt
author_email = charles.hoyt@scai.fraunhofer.de
maintainer = Charles Tapley Hoyt
maintainer_email = charles.hoyt@scai.fraunhofer.de

classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
keywords =
    Biological Expression Language
    Systems Biology
    Protein Families
    Protein Complexes

[options]
install_requires =
    click
    pandas
    pybel
    bio2bel
zip_safe = False
python_requires = >=3.6
packages = find:
package_dir =
    = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    bio2bel_famplex = bio2bel_famplex.cli:main
bio2bel =
    famplex = bio2bel_famplex

[options.packages.find]
where = src
